--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ authors = [
 requires-python = "==3.11.*"
 
 dependencies = [
+    # Variables de entorno y PostgreSQL
+    "python-dotenv",
+    "supabase>=2.4.0",
+
     # OpenCV (cv2)
     "opencv-python==4.9.0.80",
     # A veces se necesita contrib, si te faltan módulos extra
